
Changes in version 0.4.7

- Added janaroot plugin for automatic generation of ROOT trees from object
- Create symbolic link to src directory if no "src" dir/file exists in the
  installation directory
- Fixed event rate reported so events read into buffer, but not yet processed
  aren't included
- Cleaned up base JANA Usage statement and implemented in the jana utility
- Added --config option to read in configuration parameters from a file

Changes in version 0.4.6

- Modified Makefiles to no longer use JANA_HOME
- Fixed JEventLoop::FindByID() templated method to use static_className()
  instead of className() so it can be called without an object.

Changes in version 0.4.5

- Addition of headers and add/remove of std:: for gcc4.3 compatibility
- Completed "uninstall" target for build system
- Added default to autoconf for CCC=CC when building on SunOS
- Changed install scheme to more closely match unix default. Default
  now is to install directly in bin,lib,include with no platform specific
  directory unless specified at configure time via the --prefix or
  --exec_prefix arguments.
- Added INSTALL file


Changes in version 0.4.4

- Fixed bug in JGeometryXML where the unsigned attr_depth was being initialized
  using a signed value.
- Fixed bugs in JObject::Get and GetT methods

Changes in version 0.4.3

- Added CHANGES file
- Added autoconf to build system:
	= Optionally include MySQL as well as XERCES using autoconf
	= XERCES conditional compiles now based on HAVE_XERCES value
- Fixed name of TestSpeed plugin (there was a typo in the name "TerstSpeed.so")
- Added optional filter argument to GetXPaths method of JGeometry class
- Added code that decided whether to make a JGeometryXML or a JGeometryMYSQL
  object based on the JANA_GEOMETRY_URL value. This probably needs to be redone
  with a generator mechanism in order to make it extensible.
- Added JGeometryMYSQL class. Class is just a place holder and not yet implemented

